--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "preact": "^10.22.0",
     "preact-render-to-string": "^6.5.4",
+    "preact-router": "^4.1.2",
     "vinxi": "^0.3.11"
   },
   "devDependencies": {
