--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vinxi/server-functions": "^0.3.3",
     "preact": "^10.22.0",
     "preact-render-to-string": "^6.5.4",
     "preact-router": "^4.1.2",
