--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "preact": "^10.22.0",
     "preact-render-to-string": "^6.5.4",
     "preact-router": "^4.1.2",
+    "radix3": "^1.1.2",
     "vinxi": "^0.3.11"
   },
   "devDependencies": {
